--- a/sale.html
+++ b/sale.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>TopDrummer-Home</title>
+</head>
     <body>
         <p>Super Sale</p>
         <h1 onmouseover="style.color='red'" onmouseout="style.color='black'">Cymbals</h1>
         <input type="text" onkeydown="myFunction()">
 <script src="./js/main.js"></script>
-</head>
-</html>
 </body>
+</html>
 
 
